--- a/HW3_24F/HW3.tex
+++ b/HW3_24F/HW3.tex
@@ -59,7 +59,7 @@
 \pagestyle{plain}
 
 \title{{\bf Homework Set 3, CPSC 8420, Fall 2024}} % Change to the appropriate homework number
-\author{\Large\underline{Your Name}}
+\author{\Large\underline{Matthew Collins}}
 \date{\textbf{\Large\textcolor{red}{Due 11/11/2024, 11:59PM EST}}} % put your name in the LastName, FirstName format
 %\date{\today}
 
